views/main.scss
$header_margin: 5em; //5em
$highlight: #69A6FF;
$maxwidth: 55em;

#home_internal {
  background: url(/parallax.jpg);
  background-repeat: no-repeat;
  background-position: center 0px;
  background-attachment: fixed;
  background-size: cover;
  margin: 0 auto;
  width: 100%;
  position: relative;
}

div.full,body,html {
  height: 100%;
  min-height: 100%;
}

@media screen and (max-width: 43.75em) {
  #home-shoutout {
    font-size: 70% !important;
  }
  h1.header {
    font-size: 2em !important;
  }
  .subtitle > h1 {
    font-size: 1.1em !important;
  }
}

a {
  text-decoration: none;
  border-bottom: 1px dotted;
  color: #69A6FF;
}

#home-shoutout {
  position: absolute;
  text-align: center;
  width: 100%;
  color: #fff;
  font-family: "Open Sans";
  div {
    text-align: center;
    width: 90%;
    margin: 0 auto;
    h1 {
      margin: 0;
      font-size: 3.125em;
    }
    h3 {
      margin-top: 30px;
      font-weight: 300;
      font-size: 1.56em;
    }
  }
}

#scroll-notifier {
  position: absolute;
  z-index: 10000;
  bottom: 10px;
  text-align: center;
  margin: 0 auto !important;
  width: 100%;
  height: 29px;
  background: url(scroll.png) no-repeat center center;
  display: block;
  -webkit-animation: bounce-fade 1.2s infinite; /* Safari 4+ */
  -moz-animation:    bounce-fade 1.2s infinite; /* Fx 5+ */
  -o-animation:      bounce-fade 1.2s infinite; /* Opera 12+ */
  animation:        bounce-fade 1.2s infinite; /* IE 10+ */
}

@-webkit-keyframes bounce-fade {
  0%   { opacity: 0; bottom: 80px; }
  100% { opacity: 1; bottom: 10px; }
}
@-moz-keyframes bounce-fade {
  0%   { opacity: 0; bottom: 80px; }
  100% { opacity: 1; bottom: 10px; }
}
@-o-keyframes bounce-fade {
  0%   { opacity: 0; bottom: 80px; }
  100% { opacity: 1; bottom: 10px; }
}
@keyframes bounce-fade {
  0%   { opacity: 0; bottom: 80px; }
  100% { opacity: 1; bottom: 10px; }
}


.hide-nav {
  height: 52px;
  overflow: hidden;
}
/* ... */

